WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194866
REGRESSION (
r241788
): ASSERTION FAILED: !m_normalFlowListDirty in TestWebKitAPI.WebKit.ResizeReversePaginatedWebView test
https://bugs.webkit.org/show_bug.cgi?id=194866
Summary
REGRESSION (r241788): ASSERTION FAILED: !m_normalFlowListDirty in TestWebKitA...
Simon Fraser (smfr)
Reported
2019-02-20 13:00:11 PST
ASSERTION FAILED: !m_normalFlowListDirty in TestWebKitAPI.WebKit.ResizeReversePaginatedWebView test
Attachments
Patch
(1.78 KB, patch)
2019-02-20 13:02 PST
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-02-20 13:02:24 PST
Created
attachment 362528
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-02-20 13:11:47 PST
https://trac.webkit.org/changeset/241830/webkit
Radar WebKit Bug Importer
Comment 3
2019-02-20 13:12:41 PST
<
rdar://problem/48248832
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug