Cherry-pick r241830. rdar://problem/48248202

REGRESSION (r241788>): ASSERTION FAILED: !m_normalFlowListDirty in TestWebKitAPI.WebKit.ResizeReversePaginatedWebView test
    https://bugs.webkit.org/show_bug.cgi?id=194866

    Reviewed by Antti Koivisto.

    r241788 removed some calls that updated layer lists (normal flow and z-order) during compositing updates, causing
    a later call to RenderLayerCompositor::recursiveRepaintLayer() to assert when the lists were dirty. Fix by updating
    the lists in RenderLayerCompositor::recursiveRepaintLayer(), as we do in various other places.

    * rendering/RenderLayerCompositor.cpp:
    (WebCore::RenderLayerCompositor::recursiveRepaintLayer):

    Canonical link: https://commits.webkit.org/209230@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241830 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.329@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@242022 268f45cc-cd09-0410-ab3c-d52691b4dbfc